# SpiceflowNesting

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  agent.py  alembic.ini  config.py  feedback.py  models.py  notifier.py  pyproject.toml  scheduler.py  scoring.py  search_criteria.yaml
.github/workflows/: ci.yml
docs/: Master Prompt  ROADMAP_LEVELS.md  Sprint Template
docs/SampleOutputs/: email_digest_example.md
docs/Sprints/Cursor Reviews/: sprint_01_review.md  sprint_02_review.md  sprint_03_review.md  sprint_04_review.md  sprint_05_review.md  sprint_06_review.md  sprint_07_review.md  sprint_08_review.md  sprint_09_review.md  sprint_10_review.md
docs/Sprints/Sprint Plans/: sprint_02_plan.md  sprint_03_plan.md  sprint_04_plan.md  sprint_05_plan.md  sprint_06_plan.md  sprint_07_plan.md  sprint_08_plan.md  sprint_10_plan.md
migrations/: env.py
migrations/versions/: 001_create_tables.py  72356bc9b2a0_baseline.py  8c5ef4639df1_add_run_table.py  9fbc317abdfe_add_feedback_column.py
scrapers/: craigslist.py  url_helpers.py  zillow.py
templates/: digest.html
tests/: test_craigslist.py  test_digest_snapshot.py  test_feedback.py  test_geo.py  test_geo_integration.py  test_integration_scrapers.py  test_logging.py  test_models.py  test_notifier.py  test_scheduler_cli.py  test_scheduler_dedupe.py  test_scheduler_digest.py  test_scheduler_geo.py  test_scoring.py  test_scraper_filters.py  test_url_helpers.py
tests/data/: craig_sample.html
utils/: geo.py
